packages/eos-components/src/styles.scss
// Bootstrap theme variables:
$primary: #F15A22;
$secondary: #14BF96;
$gray-300: #EFF0F3;
$gray-400: #D8DDE1;
$gray-500: #CED4DA;
$gray-600: #6C757D;
$gray-700: #12272A;
$gray-800: #091415;

$light: $gray-300;
$dark: $gray-600;

$orange: #FF9741;
$yellow: #F5BD2C;
$teal: #33EFB8;
$cyan: #35E9EF;
$lavender: #CEA2EC;
$pink: #F97DA1;

// This is not a $gray-* by design:
$lightbox-background: #0F0F0F;
$lightbox-toolbar: #222222;
$lightbox-toolbar-primary: #141b1b;

$modal-content-color: $light;
$modal-content-bg: $lightbox-background;
$modal-content-border-width: 0;
$modal-backdrop-opacity: 0.8;

$theme-colors: (
  "bundle": $lavender,
  "audio": $pink,
  "document": $cyan,
  "exercise": $teal,
  "html5": $yellow,
  "zim": $yellow,
  "video": $orange
);

$card-border-width: 0;

$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
) !default;

$btn-font-weight: 600;
$headings-font-weight: 600;
$display1-weight: 700;
$display2-weight: 700;
$display3-weight: 700;
$display4-weight: 700;

$border-radius-lg: 1rem;
$body-bg: $gray-300;
$font-family-sans-serif: "Lato", sans-serif;
$headings-font-family: "Poppins", sans-serif;

$btn-font-family: $headings-font-family;
$btn-font-size: 0.875rem;
$btn-padding-x: 1rem;
$btn-padding-y: 0.5rem;
$btn-font-size-sm: 0.75rem;
$btn-padding-x-sm: 0.75rem;
$btn-padding-y-sm: 0.375rem;
$breadcrumb-font-size: 0.75rem;
$breadcrumb-divider: quote("<");
$breadcrumb-divider-color: rgba($gray-700, 0.5);
$breadcrumb-active-color: rgba($gray-700, 0.5);
$breadcrumb-bg: $secondary !default;

// Template variables:
$header-logo-width: 128;
$header-height: 349px; // Forms an area with the LG breakpoint of aspect ratio: 2.8444
$hover-lightness: -25%;
$background-alpha: -8%;
$card-image-ar: percentage(9 / 16);

:export {
  headerLogoWidth: $header-logo-width;
  xs: map-get($grid-breakpoints, "xs");
  sm: map-get($grid-breakpoints, "sm");
  md: map-get($grid-breakpoints, "md");
  lg: map-get($grid-breakpoints, "lg");
  xl: map-get($grid-breakpoints, "xl");
}

@function card-body-height($title-lines) {
  $type-line-height: $font-size-base * $line-height-base;
  $title-line-height: $title-lines * ($h5-font-size * $headings-line-height);
  $subtitle-line-height: $font-size-base * $line-height-base;
  $tags-line-height: $font-size-base * $line-height-base;

  $margins: map-get($spacers, 1) * 4;

  @return ($type-line-height + $title-line-height +
           $subtitle-line-height + $tags-line-height +
           $margins);
}

$carousel-indicator-width:           24px !default;
$carousel-indicator-height:          8px !default;
$carousel-indicator-hit-area-height: 10px !default;
$carousel-indicator-spacer:          3px !default;
$carousel-indicator-transition:      all .6s ease !default;

$carousel-image-width:    50%;
$carousel-image-lg-width: 400px;

// Copy of the Bootstrap mixin. Allows to pass a border color different than the text color.
@mixin eos-button-outline-variant($color, $border-color: $color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color) {
  color: $color;
  border-color: $border-color;

  @include hover() {
    color: $color-hover;
    background-color: $active-background;
    border-color: $active-border;
  }

  &:focus,
  &.focus {
    box-shadow: 0 0 0 $btn-focus-width rgba($active-border, .5);
  }

  &.disabled,
  &:disabled {
    color: $color;
    background-color: transparent;
  }

  &:not(:disabled):not(.disabled):active,
  &:not(:disabled):not(.disabled).active,
  .show > &.dropdown-toggle {
    color: $color;
    background-color: $active-background;
    border-color: $active-border;

    &:focus {
      @if $enable-shadows and $btn-active-box-shadow != none {
        @include box-shadow($btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($active-border, .5));
      } @else {
        // Avoid using mixin so we can pass custom focus shadow properly
        box-shadow: 0 0 0 $btn-focus-width rgba($active-border, .5);
      }
    }
  }
}

// Allows reusing the same style in the header and in the navbar:
@mixin navbar-background($header-height) {
  background-color: $header-color;
  background-attachment: fixed;
  background-position: top center;
  background-repeat: no-repeat;
  background-size: 100% auto;
  @include media-breakpoint-down(md) {
    background-size: auto $header-height;
  }
}

@import "../../template-ui/src/overrides/styles.scss";

@import 'bootstrap/scss/functions';
@import 'bootstrap/scss/mixins';
@import 'bootstrap/scss/variables';

// Style the list groups after the override colors are applied:
$list-group-active-color: $primary;
$list-group-active-bg: $white;
$list-group-active-border-color: $list-group-border-color;

// Calculate header color:
$header-color: scale-color($secondary, $lightness: 50%) !default;

// Calculate navbar height:
$navbar-height: $navbar-brand-height +
                $navbar-brand-padding-y * 2 +
                $navbar-padding-y * 2;

